objects/Customer_Commitments__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commitment_Date__c</fullName>
        <inlineHelpText>This is the date that you expect the commitment to be delivered</inlineHelpText>
        <label>Original Commitment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Components__c</fullName>
        <label>Components</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SDNO</fullName>
                </value>
                <value>
                    <fullName>Epic-MV</fullName>
                </value>
                <value>
                    <fullName>Versio Platform</fullName>
                </value>
                <value>
                    <fullName>Versio 3.x</fullName>
                </value>
                <value>
                    <fullName>ADC</fullName>
                </value>
                <value>
                    <fullName>D-Series</fullName>
                </value>
                <value>
                    <fullName>Nexio</fullName>
                </value>
                <value>
                    <fullName>Motion</fullName>
                </value>
                <value>
                    <fullName>Insight</fullName>
                </value>
                <value>
                    <fullName>Infocaster</fullName>
                </value>
                <value>
                    <fullName>SNP</fullName>
                </value>
                <value>
                    <fullName>RCP</fullName>
                </value>
                <value>
                    <fullName>Selenio MCP</fullName>
                </value>
                <value>
                    <fullName>Selenio One</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>6800+</fullName>
                </value>
                <value>
                    <fullName>xG-Scorecard</fullName>
                </value>
                <value>
                    <fullName>xG-Sales</fullName>
                </value>
                <value>
                    <fullName>xG-Linear</fullName>
                </value>
                <value>
                    <fullName>xG-Gameplan</fullName>
                </value>
                <value>
                    <fullName>xG-Architecture</fullName>
                </value>
                <value>
                    <fullName>Versio Ingest</fullName>
                </value>
                <value>
                    <fullName>Versio Core</fullName>
                </value>
                <value>
                    <fullName>Versio Automation</fullName>
                </value>
                <value>
                    <fullName>Versio</fullName>
                </value>
                <value>
                    <fullName>TechOps</fullName>
                </value>
                <value>
                    <fullName>SNP-MV</fullName>
                </value>
                <value>
                    <fullName>SelenioFlex File</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
                <value>
                    <fullName>Managed Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Target_Date__c</fullName>
        <label>Revised Commitment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Delivery_Date__c</fullName>
        <label>Customer Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Should detail what product and features are being supported in the customer commit. Be detailed as possible, shouldn’t just be one line</description>
        <inlineHelpText>Should detail what product and features are being supported in the customer commit. Be detailed as possible, shouldn’t just be one line</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Customer_Account__c</fullName>
        <formula>Opportunity__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Customer Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineering_Target_Release_Date__c</fullName>
        <label>Engineering Target Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Start_Date__c</fullName>
        <label>Estimated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Imagine_Effort_Estimation__c</fullName>
        <label>Imagine Effort Estimation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Issue_Type_ID__c</fullName>
        <label>Jira Issue Type ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Issue__c</fullName>
        <label>Jira Issue #</label>
        <length>85</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Product__c</fullName>
        <defaultValue>&quot;CUS&quot;</defaultValue>
        <description>Behind the scenes helper field to pre-determine Jira project</description>
        <label>Jira Product</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Project_ID__c</fullName>
        <label>Jira Project ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Status__c</fullName>
        <label>Jira Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Sync__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Jira Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jira_URL__c</fullName>
        <formula>HYPERLINK(&quot;https://imaginecommunications.atlassian.net/browse/&quot; &amp;  Jira_Issue__c , Jira_Issue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jira URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Jira_Comment__c</fullName>
        <label>Last Jira Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_SF_Comment__c</fullName>
        <label>Last SF Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Bid_Desk_Approved__c</fullName>
        <formula>Opportunity__r.Bid_Desk_Approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Bid Desk Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Deal_Desk_Approval_Date__c</fullName>
        <formula>Opportunity__r.Approval_Date__c</formula>
        <label>Opportunity Deal Desk Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Last_Updated__c</fullName>
        <label>Opportunity Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <formula>Opportunity__r.Opportunity_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_SOW_Review__c</fullName>
        <formula>Opportunity__r.SOW_Review__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity SOW Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Tech_Review_Approval_Date__c</fullName>
        <formula>Opportunity__r.Tech_Review_Approval_Date__c</formula>
        <label>Opportunity Tech Review Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Technical_Review_Completed__c</fullName>
        <formula>Opportunity__r.Technical_Review_Completed_and_Approved__c</formula>
        <label>Opportunity Technical Review Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer Commitments</relationshipLabel>
        <relationshipName>Customer_Commitments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Oppty_Probability__c</fullName>
        <formula>Opportunity__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Oppty__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PM_Need_By_Date__c</fullName>
        <label>PM Need By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <inlineHelpText>Determines which Jira system the request interfaces with.</inlineHelpText>
        <label>Product Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Playout</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>AdTech</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The project manager that will be handling delivery to the customer when the commitment is completed.</inlineHelpText>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Commitments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
        <relationshipLabel>Customer Commitments</relationshipLabel>
        <relationshipName>Customer_Commitments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_Late_Commitment__c</fullName>
        <label>Reason for Late Commitment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Open_Bugs__c</fullName>
        <label>Related Open Bugs</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reported_By__c</fullName>
        <formula>CreatedBy.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reported By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Icon__c</fullName>
        <formula>IF(Risk__c = &quot;#008000&quot;, IMAGE(&quot;/resource/1534866492000/Green_Status_Icon&quot;, &quot;No Risk&quot;, 30, 30),
IF(Risk__c = &quot;#FFFF00&quot;, IMAGE(&quot;/resource/1534866492000/Yellow_Status_Icon&quot;, &quot;Warning&quot;, 30, 30),
IF(Risk__c = &quot;#FF0000&quot;, IMAGE(&quot;/resource/1534866492000/Red_Status_Icon&quot;, &quot;High Risk&quot;, 30, 30),
IF(Risk__c = &quot;Block&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 30, 30),
&quot; &quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <label>Risk</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOW_Contract_been_Signed_off__c</fullName>
        <formula>IF (ISBLANK(Opportunity__r.SOW_Completion_Date__c), FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOW &amp; Contract been Signed off?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOW_Signoff_Date__c</fullName>
        <label>SOW Signoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Acceptance_Date__c</fullName>
        <label>Target Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Translated_Risk__c</fullName>
        <formula>CASE( Risk__c, &quot;#008000&quot;, 1, &quot;#FFFF00&quot;, 2, &quot;#FF0000&quot;, 3, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Translated Risk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used with data loader so the JIRA interface gets pinged.</description>
        <label>Update Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer Commitment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Commitment_Date__c</columns>
        <columns>Jira_Issue__c</columns>
        <columns>Jira_Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Oppty_Probability__c</columns>
        <columns>Components__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Commits_Needing_Update</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <columns>Jira_Issue__c</columns>
        <columns>Jira_Status__c</columns>
        <columns>Jira_Sync__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Jira_Sync__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Customer_Commitments__c.Master</value>
        </filters>
        <filters>
            <field>Jira_Issue__c</field>
            <operation>startsWith</operation>
            <value>CO-</value>
        </filters>
        <label>Commits Needing Update</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Commitment Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Commitments</pluralLabel>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <label>Master</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cant_change_commitment_date</fullName>
        <active>true</active>
        <description>Cant change commitment date when jira status is approved or later</description>
        <errorConditionFormula>AND ( ISCHANGED( Commitment_Date__c ),
OR (Jira_Status__c = &quot;Approved&quot;, Jira_Status__c = &quot;Ordered&quot;, Jira_Status__c = &quot;Delivered&quot;) )</errorConditionFormula>
        <errorDisplayField>Commitment_Date__c</errorDisplayField>
        <errorMessage>You can&apos;t change the commitment date after it has been approved.</errorMessage>
    </validationRules>
</CustomObject>